[package]
name = "cryptomator-cli-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
jwt = "0.16"
scrypt = "0.11"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
hmac = "0.12"
serde_with = { version = "3.16", features = ["base64"] }
sha2 = "0.10"
sha1 = "0.10"
aes-kw = { version = "0.2", features = ["alloc"] }
aes-siv = "0.7"
byte-unit = "5.1"
aes-gcm = "0.10"
base32 = "0.5"
cmac = "0.7"
unicode-normalization = "0.1"
