[package]
name = "cryptomator-cli-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
cryptomator-fuse-rs = { path = "cryptomator-fuse-rs" }
cryptomator-crypto = { path = "cryptomator-crypto" }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
rpassword = "7"
