[package]
name = "cryptomator-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
scrypt = "0.11"
cmac = "0.7"
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"
aes-kw = "0.2"
aes-siv = "0.7"
aes-gcm = { version = "0.10", features = ["std"] }
jwt = "0.16"
base64 = "0.22"
base32 = "0.5"
unicode-normalization = "0.1"
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.16", features = ["base64"] }
rand = "0.9"
itertools = "0.14"
log = "0.4.28"
uuid = { version = "1.18.1", features = ["v4"] }
libc = "0.2.177"
