[package]
name = "cryptomator-rs-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
cryptomator-rs-fuse = { path = "../cryptomator-rs-fuse" }
cryptomator-rs-crypto = { path = "../cryptomator-rs-crypto" }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
rpassword = "7"
log = "0.4.28"
