[package]
name = "cryptomator-rs-fuse"
version = "0.1.0"
edition = "2024"
license-file = "../LICENSE"
description = "Simple FUSE filesystem"
homepage = "https://github.com/Dar9586/cryptomator-rs"
repository = "https://github.com/Dar9586/cryptomator-rs"
categories = ["filesystem"]
keywords = ["cryptomator", "filesystem", "fuse"]

[dependencies]
fuser = "0.16"
cryptomator-rs-crypto = { path = "../cryptomator-rs-crypto" }
tracing = "0.1"
tracing-attributes = "0.1"
libc = "0.2.177"
lru = "0.16.2"
once_cell = "1.21.3"
